src/test/deca/syntax/valid/created/affichage/print_STRING.deca
// Description:
//  affiche chaine de caractere
// Resultats :
// 		OK

{
    println("Hello");
}
