src/test/deca/syntax/invalid/created/miss_element/no_parent.deca
// Description:
//		Appel print sans fermer la parenthese
// Resultats:
//		Erreur de syntaxe Ligne 7 : missing ')' at ';'

{
	println("hello";
}
